cockroach-certs/kubecerts/app-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-core-cs-cont
  namespace: smartworker
  labels:
    app: app-core-cs-cont

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: app-core-cs-cont

  template:
    metadata:
      labels:
        app: app-core-cs-cont

    spec:
      containers:
      - name: app-core
        image: schengannagari/smartworker-app:1.0
        imagePullPolicy: Always

        ports:
        - containerPort: 8089

        volumeMounts:
        - name: cockroach-certs
          mountPath: /cockroach/certs
          readOnly: true

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

      volumes:
      - name: cockroach-certs
        secret:
          secretName: cockroachdb-certs-secret
