cockroach-certs/kubecerts/cockroachdb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cockroachdb
  namespace: smartworker
spec:
  serviceName: cockroachdb
  replicas: 3

  selector:
    matchLabels:
      app: cockroachdb

  template:
    metadata:
      labels:
        app: cockroachdb

    spec:

      containers:
      - name: cockroachdb
        image: cockroachdb/cockroach:v23.1.11

        command:
          - cockroach
          - start
          - --certs-dir=/cockroach/certs
          - --advertise-host=$(POD_NAME).cockroachdb
          - --join=cockroachdb-0.cockroachdb,cockroachdb-1.cockroachdb,cockroachdb-2.cockroachdb
          - --cache=25%
          - --max-sql-memory=25%

        ports:
          - containerPort: 26257
          - containerPort: 8080

        volumeMounts:
          - name: certs
            mountPath: /cockroach/certs

      volumes:
        - name: certs-secret
          secret:
            secretName: cockroach-certs

        - name: certs
          emptyDir: {}
