cockroach-certs/kubecerts/cockroachdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  namespace: smartworker
  labels:
    app: cockroachdb
spec:
  clusterIP: None
  selector:
    app: cockroachdb
  ports:
    - name: grpc
      port: 26257
    - name: http
      port: 8180
