cockroach-certs/kubecerts/react-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartworker-web
  namespace: smartworker
spec:
  selector:
    app: smartworker-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
